# musetric-toolkit

./: license.md  pyproject.toml  readme.md
.github/workflows/: check.yml  release.yml
musetricBackendWorkers/common/: envs.py  modelFiles.py
musetricBackendWorkers/downloadModels/: index.py
musetricBackendWorkers/separateAudio/: bsRoformerSeparator.py  index.py
musetricBackendWorkers/transcribeAudio/: index.py  whisperx_runner.py
musetric_toolkit/common/: envs.py  logger.py  model_files.py
musetric_toolkit/download_models/: index.py
musetric_toolkit/separate_audio/: bs_roformer_separator.py  bs_roformer_utils.py  index.py  mdx_net_separator.py  progress.py  system_info.py  utils.py
musetric_toolkit/separate_audio/ffmpeg/: read.py  runner.py  write.py
musetric_toolkit/separate_audio/roformer/: attend.py  bs_roformer.py
musetric_toolkit/transcribe_audio/: cli.py  download_progress.py  index.py  lyric_splitter.py  progress.py  response_builder.py  whisperx_runner.py
scripts/: check.py
