[project]
name = "musetric-toolkit"
version = "0.0.1"
description = "Musetric Toolkit"
authors = [{ name = "Vladlen Popelenkov", email = "popelenkow@gmail.com" }]
requires-python = "==3.13.2"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "rotary-embedding-torch==0.8.9",
    "einops==0.8.1",
    "numpy==2.2.6",
    "numba==0.62.1",
    "PyYAML==6.0.3",
    "platformdirs==4.5.0",
    "whisperx==3.7.4",
]

[project.scripts]
musetric-separate = "musetric_toolkit.separate_audio.index:main"
musetric-transcribe = "musetric_toolkit.transcribe_audio.index:main"

[dependency-groups]
check = [
    "black==25.9.0",
    "isort==7.0.0",
    "ruff==0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["musetric_toolkit"]

[tool.black]
exclude = ".venv"

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.ruff]
exclude = [".venv"]
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
